Fix z-index issue with second select menu
Closes #15. The second select did not have a z-index set
and would appear beneath other widgets. Behaves well now.
I have also added a new field to the demo to demonstrate

--- a/src/style.css
+++ b/src/style.css
@@ -2,4 +2,5 @@
     margin-top: 15px;
     width: 90%;
     transform: translateX(11%);
+    z-index: 1;
 }
